[Feature]  Set the the verbose flag from the environment variable ERT_VERBOSE.

[Feature]  Abort if field transformation does not exist among the
supported transformations.

[Bugfix] Removed reference to undefined EnkFMain.__len__() method.

[Feature] Added small class EclCmp for comparing Eclipse simulation cases.
